bpo-40870: Invalidate usage of some constants with ast.Name (GH-20649)